add htmx and delete package via UI
